<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  <ImageView
      android:contentDescription="splash"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:src="@drawable/splash" />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:orientation="horizontal" >

  <Button
      android:id="@+id/new_game_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      android:layout_weight="1"
      android:background="@drawable/button_background"
      android:text="@string/new_game" />
 
  <Button
      android:id="@+id/pick_log_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      android:layout_weight="1"
      android:background="@drawable/button_background"
      android:text="@string/game_logs" />

  <Button
      android:id="@+id/optus_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dip"
      android:layout_marginRight="10dip"
      android:layout_weight="1"
      android:background="@drawable/button_background"
      android:text="@string/visit_optus" />

  </LinearLayout>            
</LinearLayout>
